fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.stderr
error: Type with ident 'Ident { ident: "BadType", span: #0 bytes(213..220) }' not defined in the ABI.
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  | #[indexer(manifest = "fuel-indexer-tests/assets/macros/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type `Receipt`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |                 Receipt::Call {
  |                 ^^^^^^^ use of undeclared type `Receipt`

error[E0433]: failed to resolve: use of undeclared type `Receipt`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |                 Receipt::ReturnData {
  |                 ^^^^^^^ use of undeclared type `Receipt`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `BlockData` in this scope
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                   ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::fuel::BlockData;
   |
2  | use fuel_indexer_types::native::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `BlockData` in this scope
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::fuel::BlockData;
   |
2  | use fuel_indexer_types::native::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `TransactionData` in this scope
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |         transactions: vec![TransactionData {
  |                            ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::fuel::TransactionData;
   |
2  | use fuel_indexer_types::native::TransactionData;
   |

error[E0433]: failed to resolve: use of undeclared type `TransactionStatus`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             status: TransactionStatus::default(),
  |                     ^^^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::tx::TransactionStatus;
   |
2  | use fuel_indexer_types::tx::TransactionStatus;
   |
2  | use fuels::client::schema::schema::TransactionStatus;
   |
2  | use fuels::client::schema::tx::TransactionStatus;
   |
     and 1 other candidate

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::tx::Transaction;
   |
2  | use fuel_indexer_types::tx::Transaction;
   |
2  | use fuel_tx::Transaction;
   |
2  | use fuels::client::schema::schema::Transaction;
   |
     and 3 other candidates

error[E0425]: cannot find function `serialize` in this scope
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let mut bytes = serialize(&data);
  |                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_schema::utils::serialize;
   |
2  | use fuels::prelude::serde_hex::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope

error: unused import: `Tokenizable`
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     use fuels_core::{abi_encoder::ABIEncoder, Tokenizable};
  |                                               ^^^^^^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
